# ComputePipelineTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ComputePipeline/: CMakeLists.txt
ComputePipeline/Include/: Action.hpp  ActionOutput.hpp  ComputePipeline.hpp
ComputePipeline/Include/Actions/: DecodeImage.hpp  DecompressData.hpp  LoadFromBundle.hpp  LoadFromFile.hpp  LoadFromUrl.hpp  ParseJson.hpp
ComputePipeline/Source/: ComputePipeline.cpp
ComputePipeline/Source/Actions/: DecodeImage.cpp  DecompressData.cpp  LoadFromBundle.cpp  LoadFromFile.cpp  LoadFromUrl.cpp  ParseJson.cpp
Source/: SimplePipelineTest.cpp
